# nllgrid

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTORS.txt  ChangeLog.txt  MANIFEST.in  NLLGrid.py  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: github-deploy.yml
docs/: conf.py  index.rst  requirements.txt
nllgrid/: NLLGrid.py  __init__.py  _version.py  ellipsoid.py
tests/: test_nllgrid.py
tests/data/: layer.P.mod.buf  layer.P.mod.hdr
